k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: simple-user-center-web
  name: simple-user-center-web-service
spec:
  type: LoadBalancer
  ports:
    - name: simple-user-center-web-port
      port: 8046
      protocol: TCP
      targetPort: 80
  selector:
    app: simple-user-center-web
